@@ -9,14 +9,15 @@ public abstract class AbstractFrequency implements IFrequency {
     /* 周波数値 */
     private Integer freq_n;
     private Integer freq_d;
+    @Override
     public String getFreq(){
         return freq_n + "." + freq_d;
     }
-    protected Integer getFreqN(){
-        return new Integer(freq_n);
+    public Integer getFreqN(){
+        return Integer.valueOf(freq_n);
     }
-    protected Integer getFreqD(){
-        return new Integer(freq_d);
+    public Integer getFreqD(){
+        return Integer.valueOf(freq_d);
     }
 
     //コンストラクタ
